--- a/config/environments/common/jira.yml
+++ b/config/environments/common/jira.yml
@@ -1,9 +1,7 @@
 ---
-disabled: true
+disabled: false
 authentication:
-  strategy: basic
-  user: YOUR_USERNAME
-  password: YOUR_PASSWORD
-api_host: "https://yourcompany.com"
-api_root: "/jira"
+  strategy: oauth
+api_host: "https://jira-projects.socialcast.com"
+api_root: ""
 create_issue_details: "/secure/CreateIssueDetails!init.jspa"
